<resources>
    <string name="app_name">FitHub</string>
    <string name="facebook_app_id">168841043810182</string>
    <string name="fb_login_protocol_scheme">fb168841043810182</string>
    <string name="com.twitter.sdk.android.CONSUMER.KEY">RXRarfDk5LJKdVaefkSoagkra</string>
    <string name="com.twitter.sdk.android.CONSUMER.SECRET">86czgoSaTcdVACY4Hp0D2PhDI7FoH8YPfsf6x7DUthYL3W0Xv9</string>

    <!--Start Up Page-->
    <string name="title_activity_start_up_page">FitHub</string>
    <string name="title_activity_main_page">FitHub</string>
    <string name="start_up_log_in">Log In</string>
    <string name="start_up_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="start_up_forgot_pw">Forgot your password?</string>
    <string name="start_up_or">OR</string>
    <string name="start_up_options_google">With Google</string>
    <string name="start_up_options_facebook">With Facebook</string>
    <string name="start_up_options_email">With Email</string>
    <string name="start_up_options_phone">With Phone</string>
    <string name="start_up_loading_placeholder">Loading Message</string>
    <string name="start_up_logging_in">Logging you in..</string>
    <string name="start_up_signing_up">Signing you up..</string>
    <string name="start_up_sign_up_success">Sign up successful!</string>
    <string name="start_up_logged_in">Welcome, </string>
    <string name="start_up_google_play_failed">Failed to connect to Google Play services</string>
    <string name="connection_failed">Failed to connect to remote services. Check your internet connection and try again.</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fitlocation">FitLocation</string>
    <string name="fitforum">FitForum</string>
    <string name="double_tap_back">Press the back button again to exit!</string>

    <!--Profile-->
    <string name="nav_account">My Profile</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_schedule">My Schedule</string>
    <string name="nav_settings">Settings</string>
    <string name="profile_signed_up"> just joined FitHub!</string>
    <string name="profile_created_post"> has just created a new post </string>
    <string name="profile_check_in"> was at </string>
    <string name="profile_favourited_post"> has just favourited post </string>
    <string name="profile_bio">User needs some time</string>

    <string name="profile_manager_favourited">added to favourites</string>
    <string name="profile_manager_unfavourited">removed from favourites</string>

    <!--Maps-->
    <string name="maps_hint">Can\'t find what you\'re looking for?</string>

    <!--Warning Dialogs-->
    <string name="unsaved_post_warning">You are exiting without saving your changes!
        Do you wish to continue?</string>
    <string name="empty_post_warning">Cannot post without empty title or body!</string>
    <string name="empty_fields_warning">User and Password fields cannot be empty.</string>
    <string name="incorrect_cred_warning">User or Password is incorrect. Please try again.</string>
    <string name="google_sign_in_warning">Sign in with Google unsuccessful.</string>
    <string name="warning_cancel">Cancel</string>
    <string name="warning_continue">Continue</string>
    <string name="warning_ok">Okay</string>
    <string name="empty_sign_in">Please fill in all fields.</string>
    <string name="failed_sign_in">Sign up could not be processed.</string>
    <string name="remove_location">You\'re about to remove this location from your list of favourite locations. Continue?</string>
    <string name="save_changes">Changes made will be saved to your profile. Continue?</string>

    <!--Forum-->
    <string name="forum_reply">Comment</string>
    <string name="forum_favourite">Favourite!</string>
    <string name="post_disabled">Please sign in to create a post.</string>
    <string name="like_disabled">Please sign in to like post</string>
    <string name="dislike_disabled">Please sign in to dislike post</string>
    <string name="favourite_disabled">Please sign in to favourite post</string>
    <string name="reply_disabled">Please sign in to reply to post</string>

    <!--Post-->
    <string name="post_title">Post Title</string>
    <string name="post_body">Share your thoughts!</string>
    <string name="post_submit">Submit!</string>
</resources>
