<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_my_profile"
        android:title="@string/nav_account"></item>

    <item android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_my_favourites"
        android:title="@string/nav_favourites"></item>

    <!--<item android:id="@+id/nav_schedule"-->
        <!--android:icon="@drawable/ic_my_schedules"-->
        <!--android:title="@string/nav_schedule"></item>-->

    <item android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"></item>

    <item android:id="@+id/nav_exit"
        android:icon="@drawable/ic_exit_app"
        android:title="Log Out"></item>

</menu>