<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/post_view_background"
    android:layout_gravity="center">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/warning_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:fontFamily="@font/lato_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/warning_new_post_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/warning_cancel"
            android:fontFamily="@font/lato_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/post_view_background"
            android:text="@string/warning_cancel"/>
        <Button
            android:id="@+id/warning_cont"
            android:fontFamily="@font/lato_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/post_view_background"
            android:text="@string/warning_continue"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/warning_empty_post_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/warning_ok"
            android:fontFamily="@font/lato_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/post_view_background"
            android:text="@string/warning_ok"/>
    </LinearLayout>

</LinearLayout>