<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:fontFamily="@font/lato_light"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:elevation="2dp"
            android:translationZ="2dp"
            android:orientation="horizontal"
            android:background="@drawable/sign_in_google_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:fontFamily="@font/lato_light"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_up_options_google"
                    android:layout_marginStart="50dp"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:fontFamily="@font/lato_light"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:elevation="2dp"
            android:translationZ="2dp"
            android:background="@drawable/sign_in_facebook_background"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/start_up_sign_in_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:fontFamily="@font/lato_light"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/start_up_options_facebook"
                    android:layout_marginStart="50dp"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:fontFamily="@font/lato_light"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:elevation="2dp"
            android:translationZ="2dp"
            android:background="@drawable/post_view_background"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:fontFamily="@font/lato_light"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/start_up_options_email" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:fontFamily="@font/lato_light"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:elevation="2dp"
            android:translationZ="2dp"
            android:background="@drawable/sign_in_phone_background"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/lato_light"
                    android:gravity="bottom"
                    android:text="@string/start_up_options_phone"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>