<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_up_gradient_background"
    android:orientation="vertical"
    tools:context=".LogInSignUpActivity">

    <LinearLayout
        android:id="@+id/start_up_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/start_up_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/start_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/start_up_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_up_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@color/black_overlay">
        </LinearLayout>

        <TextView
            android:id="@+id/start_up_or"
            android:fontFamily="@font/lato_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/start_up_or"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@color/black_overlay">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_up_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="3dp"
                android:translationZ="3dp"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_google_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="3dp"
                android:translationZ="3dp"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_twitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="3dp"
                android:translationZ="3dp"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_up_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/start_up_sign_up"
            android:fontFamily="@font/lato_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_up_sign_up"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/start_up_forgot_pw"
            android:fontFamily="@font/lato_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_up_forgot_pw"
            android:layout_margin="5dp" />

    </LinearLayout>

</LinearLayout>